# Spiking-Neural-Network

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  tests.yml
scripts/: dataloader.py  preprocess.py  train.py
src/spiking_neural_network/: __init__.py  builder.py  config.py  data_module.py  datasets.py  encoding.py  evaluation.py  exceptions.py  hodgkin_huxley.py  images.py  lif.py  network.py  pipeline.py  plotting.py  schedules.py  seeds.py  trainer.py  training_logs.py  validation.py
src/spiking_neural_network/adali/: __init__.py  jax_losses.py  jax_ops.py  model.py  numpy_ops.py  weights.py
src/spiking_neural_network/hopfield/: __init__.py  hopfield.py  hopfield_jax.py
tests/: conftest.py  helpers.py  test_adali.py  test_adali_jax.py  test_adali_jax_losses.py  test_builder.py  test_config.py  test_data_module.py  test_datasets.py  test_encoding.py  test_evaluation.py  test_hodgkin_huxley.py  test_hopfield.py  test_images.py  test_init.py  test_lif.py  test_network.py  test_pipeline.py  test_plotting.py  test_schedules.py  test_seeds.py  test_trainer.py  test_training_config.py  test_training_logs.py  test_validation.py
