[project]
name = "spiking-neural-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AlexWoods1", email = "AlexWoods1@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.92",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
