[project]
name = "spiking-neural-network"
version = "0.1.0"
description = "Image-to-spike encoding for spiking neural network experiments"
readme = "README.md"
authors = [
    { name = "AlexWoods1", email = "AlexWoods1@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.92",
    "optax>=0.2.8",
    "tqdm>=4.68.3",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "black~=26.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=spiking_neural_network --cov-report=term-missing"

[tool.coverage.run]
source = ["spiking_neural_network"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.basedpyright]
pythonVersion = "3.14"
include = ["src/spiking_neural_network", "tests"]
extraPaths = ["scripts"]
typeCheckingMode = "standard"

[tool.black]
target-version = ["py314"]
